# nam-agents

./: AGENTS.md  Makefile  README.md  docker-compose.yml
compose/: .env.example
infra/: .gitignore  README.md  agent_runtime.tf  ecr.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/kb/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/agent-runtime/: agent_runtime.tf  ecr.tf  iam.tf  main.tf  outputs.tf  variables.tf
infra/simple/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy-image.sh  invoke-runtime.sh
src/agents/: .env.example  Dockerfile  README.md  entrypoint.sh  general_agent.py  main.py  pyproject.toml  runtime.py  settings.py  test_runtime.py
src/agents/cmd/: kb_main.py  main.py  test_runtime.py
src/agents/configs/: settings.py
src/agents/core/: agent.py  kb_agent.py  knowledge_base.py
src/agents/runtimes/: knowledge_base.py  simple.py
src/embedding/: .env.example  README.md  pyproject.toml
src/embedding/api/: server.py
src/embedding/cmd/: cli.py
src/embedding/configs/: settings.py
src/embedding/core/: __init__.py  chunker.py  embedder.py  loaders.py  opensearch_store.py  service.py
src/embedding/nam_embedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
