[project]
name = "nam-agents"
version = "0.1.0"
description = "General Q&A agents built with the Strands Agents SDK"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.0.0",
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cmd*", "configs*", "runtimes*"]
