[project]
name = "nam-embedding"
version = "0.1.0"
description = "Async embedding service for OpenSearch (Bedrock Cohere + FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.0.0",
    "aiofiles>=24.0.0",
    "fastapi>=0.115.0",
    "opensearch-py[async]>=2.8.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cmd*", "configs*", "api*"]
